// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chips renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.c3 {
  font-family: Museo Sans Cyrl;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
}

.c1 {
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 8px;
  padding: 2px 16px;
  border-radius: 100px;
  border: 1px solid;
  border-color: #D2D3D7FF;
  color: #343A4AFF;
}

.c1:hover {
  cursor: pointer;
  color: #006AD6FF;
}

.c1:active {
  color: #004A97FF;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;
  opacity: 0;
}

<div
  className="c0"
  data-testid="rovna-ui-chips"
>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3"
    >
      Monday
    </span>
  </label>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3"
    >
      Tuesday
    </span>
  </label>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3"
    >
      Wednesday
    </span>
  </label>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3"
    >
      Thursday
    </span>
  </label>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3"
    >
      Friday
    </span>
  </label>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3"
    >
      Saturday
    </span>
  </label>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3"
    >
      Sunday
    </span>
  </label>
</div>
`;

exports[`Chips renders correctly 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c4 {
  font-family: Museo Sans Cyrl;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
}

.c5 {
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 8px;
  padding: 2px 16px;
  border-radius: 100px;
  border: 1px solid;
  border-color: #D2D3D7FF;
  color: #343A4AFF;
}

.c5:hover {
  cursor: pointer;
  color: #006AD6FF;
}

.c5:active {
  color: #004A97FF;
}

.c1 {
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 8px;
  padding: 2px 16px;
  border-radius: 100px;
  border: 1px solid;
  border-color: #0062C9FF;
  color: #0062C9FF;
}

.c1:hover {
  cursor: pointer;
  color: #006AD6FF;
}

.c1:active {
  color: #004A97FF;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;
  opacity: 0;
}

<div
  className="c0"
  data-testid="rovna-ui-chips"
>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3 rovna-ui-icon-root anticon"
      data-testid="rovna-ui-done-icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M19.7071 8.70711C20.0976 8.31658 20.0976 7.68342 19.7071 7.29289C19.3166 6.90237 18.6834 6.90237 18.2929 7.29289L10 15.5858L5.70711 11.2929C5.31658 10.9024 4.68342 10.9024 4.29289 11.2929C3.90237 11.6834 3.90237 12.3166 4.29289 12.7071L9.29289 17.7071C9.68342 18.0976 10.3166 18.0976 10.7071 17.7071L19.7071 8.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="c4"
    >
      Monday
    </span>
  </label>
  <label
    className="c1"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c3 rovna-ui-icon-root anticon"
      data-testid="rovna-ui-done-icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M19.7071 8.70711C20.0976 8.31658 20.0976 7.68342 19.7071 7.29289C19.3166 6.90237 18.6834 6.90237 18.2929 7.29289L10 15.5858L5.70711 11.2929C5.31658 10.9024 4.68342 10.9024 4.29289 11.2929C3.90237 11.6834 3.90237 12.3166 4.29289 12.7071L9.29289 17.7071C9.68342 18.0976 10.3166 18.0976 10.7071 17.7071L19.7071 8.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="c4"
    >
      Tuesday
    </span>
  </label>
  <label
    className="c5"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c4"
    >
      Wednesday
    </span>
  </label>
  <label
    className="c5"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c4"
    >
      Thursday
    </span>
  </label>
  <label
    className="c5"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c4"
    >
      Friday
    </span>
  </label>
  <label
    className="c5"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c4"
    >
      Saturday
    </span>
  </label>
  <label
    className="c5"
    onClick={[Function]}
  >
    <input
      className="c2"
      type="checkbox"
    />
    <span
      className="c4"
    >
      Sunday
    </span>
  </label>
</div>
`;
